// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success-icon render 1`] = `
<div
  className="swal2-icon swal2-success swal2-icon-show"
>
  <div
    className="swal2-success-circular-line-left"
  />
  <span
    className="swal2-success-line-tip"
  />
  <span
    className="swal2-success-line-long"
  />
  <div
    className="swal2-success-ring"
  />
  <div
    className="swal2-success-fix"
  />
  <div
    className="swal2-success-circular-line-right"
  />
</div>
`;

exports[`success-icon render with props 1`] = `
<div
  className="swal2-icon swal2-success swal2-icon-show m-2"
>
  <div
    className="swal2-success-circular-line-left"
  />
  <span
    className="swal2-success-line-tip"
  />
  <span
    className="swal2-success-line-long"
  />
  <div
    className="swal2-success-ring"
  />
  <div
    className="swal2-success-fix"
  />
  <div
    className="swal2-success-circular-line-right"
  />
</div>
`;
